# SpaceEngine

./: .gitignore  CMakeLists.txt  README.md  build_project.bash
Dependencies/GLAD/include/glad/: glad.h
Dependencies/GLAD/src/: glad.c
src/: CMakeLists.txt  main.cpp  spaceengine.cpp
src/common/: spaceengine.h
